--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,6 @@
 PolarblewrapSdk_kotlinVersion=1.7.0
-PolarblewrapSdk_minSdkVersion=21
+PolarblewrapSdk_minSdkVersion=24
 PolarblewrapSdk_targetSdkVersion=31
 PolarblewrapSdk_compileSdkVersion=31
 PolarblewrapSdk_ndkversion=21.4.7075529
+PolarblewrapSdk_PolarsdkVersion=5.1.0
